# Project-Euler

./: .gitignore  README.md  runTests.sh
cpp/: CMakeLists.txt  EulerSolution.h  EulerUtils.cpp  EulerUtils.h  Problem001.cpp  Problem002.cpp  Problem003.cpp  Problem004.cpp  Problem005.cpp  Problem006.cpp  Problem007.cpp  Problem008.cpp  Problem009.cpp  Problem010.cpp  Problem014.cpp  Problem019.cpp  RunTests.cpp  runTests.bat  runTests.sh
fsharp/: Problem1.fs  Problem2.fs  Problem3.fs  Problem4.fs  Problem5.fs  Problem6.fs  Problem7.fs  runTests.sh
java/: EulerSolution.java  Problem1.java  Problem2.java  Problem3.java  Problem4.java  Problem5.java  Problem6.java  Problem8.java  assembleTests.sh  runTests.sh
java/Problem/: EulerSolution.java  EulerUtils.java  Problem001.java  Problem002.java  Problem003.java  Problem004.java  Problem005.java  Problem006.java  Problem007.java  Problem008.java  Problem009.java  Problem010.java  Problem011.java  Problem012.java  Problem013.java  Problem014.java  Problem015.java  Problem016.java  Problem018.java  Problem019.java  Problem067.java  Problem1.java  Problem10.java  Problem2.java  Problem3.java  Problem4.java  Problem5.java  Problem6.java  Problem7.java  Problem8.java  Problem9.java
java/Solution/: Problem1.java  Problem2.java  (+5 more)
python/: EulerUtils.py  Problem002.py  Problem003.py  Problem004.py  Problem005.py  Problem007.py  Problem009.py  Problem011.py  Problem014.py  Problem016.py  Problem019.py  Problem1.py  Problem10.py  Problem2.py  Problem3.py  Problem4.py  Problem5.py  Problem7.py  RunTests.py  runTests.sh
(+13 files in other folders)
